Fixed the scrollbar issue and hidden it and then i made it work correctly

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,7 +50,22 @@ html::-webkit-scrollbar,
 body::-webkit-scrollbar {
   display: none; /* Chrome/Safari */
 }
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none !important; /* Chrome, Safari and Opera */
+}
+
+.scrollbar-hide::-webkit-scrollbar-track {
+  display: none !important;
+}
+
+.scrollbar-hide::-webkit-scrollbar-thumb {
+  display: none !important;
+}
 /* Cursor trail effect */
 body:hover > #trailer {
   opacity: 1;
